# cardano-dex-backend

./: .gitignore  CHANGELOG.md  Dockerfile  Path  README.md  cabal.project  cardano-dex-backend.cabal  default.nix  docker-compose.yaml  hie.yaml  release.nix  shell.nix  stack.yaml
amm-executor/: amm-executor.cabal
amm-executor/app/: Main.hs
amm-executor/resources/: config.dhall
amm-executor/src/Spectrum/: Executor.hs
amm-executor/src/Spectrum/Common/: Parsers.hs
amm-executor/src/Spectrum/Common/Persistence/: Exception.hs  Serialization.hs
amm-executor/src/Spectrum/Common/Streaming/: Class.hs
amm-executor/src/Spectrum/Executor/: Config.hs  DataSource.hs  Scripts.hs  Topic.hs  Types.hs
amm-executor/src/Spectrum/Executor/Backlog/: Config.hs  Process.hs  Service.hs
amm-executor/src/Spectrum/Executor/Backlog/Data/: BacklogOrder.hs
amm-executor/src/Spectrum/Executor/Backlog/Persistence/: BacklogStore.hs  Config.hs
amm-executor/src/Spectrum/Executor/Data/: OrderState.hs  PoolState.hs  State.hs
amm-executor/src/Spectrum/Executor/DataSource/: Persistence.hs  Stream.hs
amm-executor/src/Spectrum/Executor/EventSink/: Pipe.hs  Types.hs
amm-executor/src/Spectrum/Executor/EventSink/Data/: OrderEvent.hs  PoolEvent.hs
amm-executor/src/Spectrum/Executor/EventSink/Handlers/: Orders.hs  Pools.hs
amm-executor/src/Spectrum/Executor/EventSource/: LedgerView.hs  Persistence.hs  Stream.hs  Types.hs
amm-executor/src/Spectrum/Executor/EventSource/Data/: Tx.hs  TxContext.hs  TxEvent.hs
amm-executor/src/Spectrum/Executor/EventSource/Persistence/: Config.hs  Exception.hs  LedgerHistory.hs
amm-executor/src/Spectrum/Executor/EventSource/Persistence/Data/: BlockLinks.hs
amm-executor/src/Spectrum/Executor/OrdersExecutor/: Process.hs  RefInputs.hs  Service.hs
amm-executor/src/Spectrum/Executor/PoolTracker/: Process.hs  Service.hs
amm-executor/src/Spectrum/Executor/PoolTracker/Data/: Traced.hs
amm-executor/src/Spectrum/Executor/PoolTracker/Persistence/: Config.hs  Pools.hs
amm-executor/test/: Spec.hs
amm-executor/test/Tests/Backlog/: PersistenceMock.hs  ServiceTest.hs
amm-executor/test/Tests/OrdersExecutor/: ProcessTest.hs
app/: Main.hs
ci/: BaseBackend  DockerfileExecutor  DockerfileExplorer  DockerfileResolver  DockerfileTracker  docker-compose.yml
core/: core.cabal
core/src/Core/: Streaming.hs  Types.hs  Utils.hs
core/src/Core/Extractor/: AlonzoTxExtractors.hs  Class.hs
core/src/Core/Throw/: Combinators.hs
executor/: Dockerfile  executor.cabal
executor/app/: Main.hs
executor/resources/: config.dhall
executor/src/Executor/: HttpClient.hs  KafkaClient.hs  Processor.hs  Sender.hs  SettingsReader.hs  Utils.hs
executor/src/Executor/Clients/: PoolsResolverClient.hs
executor/src/Executor/Models/: Config.hs  Errors.hs  KafkaModel.hs  Settings.hs
executor/src/Executor/Programs/: Processor.hs
executor/src/Executor/Services/: BashService.hs  ConfigReader.hs  HttpReqService.hs  KafkaService.hs  OrdersExecutor.hs  PoolsResolver.hs  Processor.hs  ScriptsExecutor.hs  Sender.hs  SettingsReader.hs
executor/src/Executor/Wirings/: WiringApp.hs
ledger-bridge/: ledger-bridge.cabal
ledger-bridge/src/Cardano/Network/Protocol/NodeToClient/: Trace.hs
ledger-bridge/src/Spectrum/: Context.hs  LedgerBridge.hs
ledger-bridge/src/Spectrum/LedgerBridge/: Config.hs  Exception.hs
ledger-bridge/src/Spectrum/LedgerBridge/Data/: LedgerUpdate.hs
ledger-bridge/src/Spectrum/LedgerBridge/Protocol/: ChainSync.hs  Client.hs
ledger-bridge/src/Spectrum/LedgerBridge/Protocol/Data/: ChainSync.hs
ledger-sync/: ledger-sync.cabal
ledger-sync/src/Cardano/Network/Protocol/NodeToClient/: Trace.hs
ledger-sync/src/Spectrum/: Context.hs  HigherKind.hs  LedgerSync.hs  Prelude.hs
ledger-sync/src/Spectrum/LedgerSync/: Config.hs  Exception.hs  Types.hs
ledger-sync/src/Spectrum/LedgerSync/Data/: LedgerUpdate.hs
ledger-sync/src/Spectrum/LedgerSync/Protocol/: ChainSync.hs  Client.hs
ledger-sync/src/Spectrum/LedgerSync/Protocol/Data/: ChainSync.hs
pools-resolver/: pools-resolver.cabal
pools-resolver/app/: Main.hs
pools-resolver/resources/: config.dhall
pools-resolver/src/: Resolver.hs
pools-resolver/src/Resolver/: AppWiring.hs  HttpServer.hs  KafkaClient.hs  Pool.hs  PoolsResolver.hs  PoolsResolverProcessor.hs  RedisClient.hs  Settings.hs  SettingsReader.hs  Utils.hs
pools-resolver/src/Resolver/Endpoints/: HttpServer.hs
pools-resolver/src/Resolver/Models/: AppSettings.hs  CfmmPool.hs  Types.hs
pools-resolver/src/Resolver/Program/: Resolver.hs
pools-resolver/src/Resolver/Repositories/: PoolRepository.hs
pools-resolver/src/Resolver/Services/: ConfigReader.hs  KafkaService.hs  PoolApi.hs  PoolResolver.hs  PoolsResolver.hs  SettingsReader.hs
pools-resolver/src/Resolver/Wirings/: WiringApp.hs
spectrum-prelude/: spectrum-prelude.cabal
spectrum-prelude/src/Spectrum/Prelude/: Context.hs  HigherKind.hs  Throw.hs  UnliftIO.hs
streaming/: streaming.cabal
streaming/src/Streaming/: Class.hs  Config.hs  Consumer.hs  Events.hs  Producer.hs  Types.hs
tracker/: tracker.cabal
tracker/app/: Main.hs
tracker/resources/: config.dhall
tracker/src/Dex/: HttpClient.hs  TxOutsProcessor.hs
tracker/src/Dex/Contract/: Integration.hs
tracker/src/Tracker/: App.hs  HttpClient.hs  KafkaClient.hs  TxOutsProcessor.hs  Utils.hs
tracker/src/Tracker/Caches/: TrackerCache.hs
tracker/src/Tracker/Clients/: ExplorerClient.hs
tracker/src/Tracker/Contract/: Integration.hs
tracker/src/Tracker/Models/: AppConfig.hs  AppSettings.hs  ExplorerModels.hs  KafkaModel.hs
tracker/src/Tracker/Modules/: Grabber.hs  Publisher.hs
tracker/src/Tracker/Programs/: TrackerProgram.hs
tracker/src/Tracker/Repository/: ExplorerRepo.hs
tracker/src/Tracker/Services/: ConfigReader.hs  ExplorerService.hs  HttpReqService.hs  KafkaService.hs  Logger.hs  ParserService.hs  SettingsReader.hs  TrackerService.hs  TxOutsProcessor.hs
tracker/src/Tracker/Wirings/: WiringApp.hs
wallet-helper/: wallet-helper.cabal
wallet-helper/app/: Main.hs
wallet-helper/src/Wallet/: Helper.hs
(+75 files in other folders)
