cabal-version:      2.4
name:               cardano-dex-backend
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/hello

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        AutoDeriveTypeable
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MonadFailDesugaring
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        NoImplicitPrelude
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Dex.Contract.Integration
                     Dex.HttpClient
                     Dex.TxOutsProcessor
                     Dex.Models.AppSettings
                     Dex.Models.ApiTxOut
                    --  Dex.ModelsConverter

    build-depends: 
        bytestring ^>=0.10.12.0,
        http-conduit,
        aeson,
        rio,
        aeson-casing,
        text,
        containers,
        bytestring,
        streamly,
        req,
        conduit,
        data-default-class,
        req-conduit,
        conduit-extra,
        plutus-ledger-api

executable cardano-dex-backend
    main-is: Main.hs
    build-depends: base >= 4.9 && < 5,
        cardano-dex-backend,
        rio
    hs-source-dirs:   app
    default-language: Haskell2010
