cabal-version:      2.4
name:               amm-executor
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-backend

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DerivingStrategies
                        UndecidableInstances
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        LambdaCase
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -O2
                        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Spectrum.Executor
                     Spectrum.Executor.Types
                     Spectrum.Executor.Config
                     Spectrum.Executor.Topic
                     Spectrum.Executor.Data.State
                     Spectrum.Executor.Data.OrderState
                     Spectrum.Executor.Data.PoolState
                     Spectrum.Executor.EventSource.Types
                     Spectrum.Executor.EventSource.Stream
                     Spectrum.Executor.EventSource.Data.TxContext
                     Spectrum.Executor.EventSource.Data.TxEvent
                     Spectrum.Executor.EventSource.Data.Tx
                     Spectrum.Executor.EventSource.Persistence.Config
                     Spectrum.Executor.EventSource.Persistence.LedgerHistory
                     Spectrum.Executor.EventSource.Persistence.Data.BlockLinks
                     Spectrum.Executor.EventSink.Pipe
                     Spectrum.Executor.EventSink.Types
                     Spectrum.Executor.EventSink.Handlers.Pools
                     Spectrum.Executor.EventSink.Handlers.Orders
                     Spectrum.Executor.EventSink.Data.OrderEvent
                     Spectrum.Executor.EventSink.Data.PoolEvent
                     Spectrum.Executor.PoolTracker.Data.Traced
                     Spectrum.Executor.PoolTracker.Persistence.Config
                     Spectrum.Executor.PoolTracker.Persistence.Pools
                     Spectrum.Executor.PoolTracker.Process
                     Spectrum.Executor.PoolTracker.Service
                     Spectrum.Executor.Backlog.Data.BacklogOrder
                     Spectrum.Executor.Backlog.Persistence.BacklogStore
                     Spectrum.Executor.Backlog.Persistence.Config
                     Spectrum.Executor.Backlog.Config
                     Spectrum.Common.Persistence.Exception
                     Spectrum.Common.Persistence.Serialization
                     Spectrum.Common.Streaming.Class

    build-depends:  bytestring
                  , aeson
                  , rio
                  , bytestring
                  , mmorph == 1.1.5
                  , generic-lens == 2.2.0.0
                  , containers == 0.6.2.1
                  , strict-containers
                  , stm == 2.5.0.1
                  , text == 1.2.5.0
                  , hashable == 1.3.0.0
                  , pqueue
                  , utf8-string
                  , binary
                  , dhall
                  , transformers
                  , transformers-base
                  , unliftio-core
                  , monad-control
                  , io-classes == 0.2.0.0
                  , resourcet
                  , exceptions
                  , streamly
                  , core == 0.1.0.0
                  , base16
                  , base58-bytestring
                  , base64
                  , bech32
                  , cborg
                  , bytestring
                  , serialise
                  , contra-tracer
                  , cardano-tx
                  , cardano-api
                  , cardano-binary
                  , cardano-crypto
                  , cardano-crypto-class
                  , cardano-crypto-wrapper
                  , cardano-ledger-alonzo
                  , cardano-ledger-byron
                  , cardano-ledger-core
                  , cardano-ledger-shelley
                  , cardano-ledger-shelley-ma
                  , cardano-protocol-tpraos
                  , cardano-slotting
                  , ouroboros-consensus
                  , ouroboros-consensus-byron
                  , ouroboros-consensus-cardano
                  , ouroboros-consensus-shelley
                  , ouroboros-network
                  , ouroboros-network-framework
                  , typed-protocols
                  , typed-protocols-cborg
                  , network-mux
                  , iohk-monitoring == 0.2.0.0
                  , plutus-ledger
                  , plutus-ledger-api
                  , plutus-tx
                  , hlog
                  , random
                  , ledger-sync
                  , unix == 2.7.2.2
                  , dex-core == 0.1.0.0
                  , rocksdb-haskell == 0.1.0.0

executable amm-executor-app
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs

    ghc-options:      -O2
                      -threaded

    build-depends:    base >= 4.9 && < 5
                    , amm-executor
                    , rio
