cabal-version:      2.4
name:               amm-executor
version:            0.1.0.0

author:             SpectrumFinance
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/spectrum-finance/cardano-dex-backend

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DerivingStrategies
                        UndecidableInstances
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        LambdaCase
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        LambdaCase
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -O2
                        -threaded
                        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src

    ghc-options:      -O2
                      -threaded
    
    exposed-modules: Spectrum.Executor
                     Spectrum.Executor.Types
                     Spectrum.Executor.Config
                     Spectrum.Executor.Scripts
                     Spectrum.Executor.Data.State
                     Spectrum.Executor.Data.OrderState
                     Spectrum.Executor.Data.PoolState
                     Spectrum.Executor.EventSink.Pipe
                     Spectrum.Executor.EventSink.Types
                     Spectrum.Executor.EventSink.Handlers.Pools
                     Spectrum.Executor.EventSink.Handlers.Orders
                     Spectrum.Executor.PoolTracker.Data.Traced
                     Spectrum.Executor.PoolTracker.Persistence.Config
                     Spectrum.Executor.PoolTracker.Persistence.Pools
                     Spectrum.Executor.PoolTracker.Process
                     Spectrum.Executor.PoolTracker.Service
                     Spectrum.Executor.Backlog.Data.BacklogOrder
                     Spectrum.Executor.Backlog.Persistence.BacklogStore
                     Spectrum.Executor.Backlog.Persistence.Config
                     Spectrum.Executor.Backlog.Service
                     Spectrum.Executor.Backlog.Process
                     Spectrum.Executor.Backlog.Config
                     Spectrum.Executor.OrdersExecutor.Process
                     Spectrum.Executor.OrdersExecutor.Service
                     Spectrum.Executor.OrdersExecutor.RefInputs
                     Spectrum.Common.Streaming.Class
                     Spectrum.Common.Parsers

    build-depends:  bytestring
                  , aeson
                  , rio
                  , bytestring
                  , mmorph == 1.1.5
                  , generic-lens == 2.2.0.0
                  , containers == 0.6.5.1
                  , strict-containers
                  , stm == 2.5.0.1
                  , text == 1.2.5.0
                  , pqueue
                  , utf8-string
                  , binary
                  , dhall
                  , time
                  , transformers
                  , transformers-base
                  , unliftio-core
                  , monad-control
                  , io-classes == 0.2.0.0
                  , resourcet
                  , exceptions
                  , streamly
                  , spectrum-prelude
                  , base16
                  , base58-bytestring
                  , base64
                  , bech32
                  , cborg
                  , bytestring
                  , serialise
                  , contra-tracer
                  , cardano-tx
                  , cardano-api
                  , cardano-binary
                  , cardano-crypto
                  , cardano-crypto-class
                  , cardano-crypto-wrapper
                  , cardano-ledger-alonzo
                  , cardano-ledger-byron
                  , cardano-ledger-core
                  , cardano-ledger-shelley
                  , cardano-ledger-shelley-ma
                  , cardano-ledger-babbage
                  , cardano-protocol-tpraos
                  , cardano-slotting
                  , ouroboros-consensus
                  , ouroboros-consensus-byron
                  , ouroboros-consensus-cardano
                  , ouroboros-consensus-shelley
                  , ouroboros-consensus-protocol
                  , ouroboros-network
                  , ouroboros-network-framework
                  , typed-protocols
                  , typed-protocols-cborg
                  , network-mux
                  , plutus-ledger
                  , plutus-ledger-api
                  , plutus-script-utils
                  , plutus-tx
                  , hlog
                  , random
                  , parsec
                  , ledger-sync
                  , unix == 2.7.2.2
                  , dex-core == 0.1.0.0
                  , rocksdb-haskell == 0.1.0.0
                  , cardano-dex-contracts-offchain
                  , submit-api
                  , wallet-api
                  , network-api
                  , quickblue
                  , async
                  , unagi-chan == 0.4.1.4
                  , ledger-sync
                  , cryptonite
                  , spectrum
                  , hslogger

executable amm-executor-app
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs

    ghc-options:      -O2
                      -threaded

    build-depends:    base >= 4.9 && < 5
                    , amm-executor
                    , rio

test-suite amm-executor-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Tests.Backlog.ServiceTest
    Tests.Backlog.PersistenceMock
    Tests.OrdersExecutor.ProcessTest
    Gen.OrdersGen
    Gen.LoggingGen
    Gen.ConstantsGen
    Gen.ServicesGen
    Gen.ExceptionsGen
  build-depends:
    , base  == 4.14.3.0
    , HUnit == 1.6.2.0
    , bytestring
    , aeson
    , rio
    , tasty-hunit==0.10.0.3
    , submit-api
    , tasty==1.4.2
    , tasty-hedgehog==1.1.0.0
    , amm-executor
    , containers
    , base16-bytestring
    , extra
    , hedgehog
    , text
    , plutus-ledger-api
    , plutus-tx
    , dex-core
    , spectrum-prelude
    , quickblue
    , cardano-tx
    , cardano-api
    , streamly
    , network-api
    , cardano-dex-contracts-offchain
    , plutus-ledger
    , cardano-ledger-babbage
    , cardano-ledger-shelley
    , plutus-core
    , plutus-script-utils
    , transformers
    , hlog
    , ledger-sync
    , resourcet
    , wallet-api
    , spectrum