cabal-version:      2.4
name:               executor
version:            0.1.0.0

author:             ErgoLabs
maintainer:

debug-info: True

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-backend

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        NoImplicitPrelude
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Executor.Models.Config
                     Executor.Services.OrdersExecutor
                     Executor.Services.ConfigReader
                     Executor.Wirings.WiringApp
                     Executor.Services.PoolsResolver
                     Executor.Programs.Processor
                     Executor.Models.Errors
                     
    build-depends: hashable        == 1.3.0.0
                  , streaming-kafka == 0.1.0.0
                  , cardano-tx      == 0.1.0.0
                  , dex-core        == 0.1.0.0
                  , quickblue       == 0.1.0.0
                  , exceptions      == 0.10.4
                  , resourcet       == 1.2.4.3
                  , unliftio-core   == 0.2.0.1
                  , transformers    == 0.5.6.2
                  , hedis           == 0.14.4
                  , utf8-string     == 1.0.2
                  , core
                  , bytestring
                  , rio
                  , text
                  , bytestring
                  , streamly
                  , plutus-ledger-api
                  , dhall
                  , plutus-tx
                  , http-conduit
                  , http-client
                  , wallet-api
                  , submit-api
                  , network-api
                  , sdk-core
                  , tracker
                  , unliftio
                  , either

executable executor-app
    main-is: Main.hs
    build-depends: 
        base >= 4.9 && < 5,
        executor,
        rio
    hs-source-dirs:   app
    default-language: Haskell2010
