cabal-version:      2.4
name:               executor
version:            0.1.0.0

author:             ErgoLabs
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-dex-backend

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        NoImplicitPrelude
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        TypeApplications
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Executor.Models.Config
                     Executor.Services.OrdersExecutor
                     Executor.Services.ConfigReader
                     Executor.Wirings.WiringApp
                     Executor.Services.PoolsResolver
                     Executor.Programs.Processor
                     Executor.Models.Errors
                     
    build-depends:  cardano-tx
                  , streaming-kafka
                  , core
                  , bytestring
                  , rio
                  , text
                  , bytestring
                  , streamly
                  , plutus-ledger-api -any
                  , dex-core==0.1.0.0
                  , submit-api==0.1.0.0
                  , network-api==0.1.0.0
                  , wallet-api==0.1.0.0
                  , cardano-api==1.32.1
                  , quickblue==0.1.0.0
                  , plutus-ledger==0.1.0.0
                  , dhall
                  , plutus-tx
                  , http-conduit
                  , http-client
                  , resourcet
                  , exceptions
                  , ergo-hs-common
                  , tracker
                  , hlog

executable executor-app
    main-is: Main.hs
    build-depends: 
        base >= 4.9 && < 5,
        executor,
        rio
    hs-source-dirs:   app
    default-language: Haskell2010
